# ALGORITMOS

./: .gitignore  README.md  batch_test.py  generar_red.py  gui.py  package-lock.json  package.json  requirements.txt  setup.sh
QNodes/: .gitignore  LICENSE  exec.py  pyphi_config.yml  pyproject.toml
QNodes/.docs/: application.md
QNodes/.docs/.diagrams/: architecture.md  classes.md  components.md
QNodes/.docs/.errors/: with_pyphi.md
QNodes/.docs/.solutions/: P1G2-2024-2.md
QNodes/.docs/.strategies/qnodes/: EjemploQNodesV1.xlsx  EnunciadoEstrategiaQNodes.docx  implementation.md
QNodes/.docs/.study/notes/: main.tex  structure.tex
QNodes/.docs/.study/notes/chapters/: analisis.tex  heuristicos.tex  notaciones.tex  pdinamica.tex  ramificacion.tex  recurrencia.tex  retroceso.tex  vencer.tex  voraces.tex
QNodes/src/: main.py
QNodes/src/.samples/: N10A.csv  N15B.csv  N3A.csv  N3B.csv  N4A.csv  N4B.csv  N4C.csv  N5A.csv  N5B.csv  N6A.csv  N8A.csv
QNodes/src/constants/: base.py  error.py  models.py
QNodes/src/controllers/: manager.py
QNodes/src/funcs/: force.py  format.py  iit.py
QNodes/src/middlewares/: profile.py  slogger.py
QNodes/src/models/base/: application.py  sia.py
QNodes/src/models/core/: ncube.py  solution.py  system.py
QNodes/src/models/enums/: distance.py  notation.py  temporal_emd.py
QNodes/src/strategies/: force.py  phi.py  q_nodes.py
kGeoMip/src/Method2_Dynamic_Programming_Reformulation/: cli.py  exec.py  pyphi_config.yml  pyproject.toml  test_kpartir.py
kGeoMip/src/Method2_Dynamic_Programming_Reformulation/src/: main.py
(+59 files in other folders)
