[project]
name = "proyecto-2025a"
version = "0.1.0"
description = "Framework for the Minimal Information Partition problem."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy==1.26.4",
    "scipy==1.17.0",
    "pyphi==1.2.0",
    "pyinstrument==5.1.2",
    "pandas==2.3.3",
    "openpyxl==3.1.3",
    "pyttsx3==2.98",
    "colorama==0.4.5",
]