[project]
name = "proyecto-2025a"
version = "0.1.0"
description = "Framework for the Minimal Information Partition problem."
readme = "README.md"
requires-python = ">=3.9.13"
dependencies = [
    "colorama>=0.4.6",
    "numpy>=2.0.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pyinstrument>=5.1.2",
    "pyphi>=1.2.0",
    "pyttsx3>=2.99",
]
